--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "bootstrap": "^5.3.3",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^3.4.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
